updates for Dockerfile